--- a/index.html
+++ b/index.html
@@ -112,9 +112,28 @@
       </div>
     </section>
 
-    
+    <!-- 4th section end -->
+    <!-- footer start -->
     <footer>
+        <div class="footer-container">
+            <div class="left">
+                <h4 class="section-title-2">Future</h4>
+                <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+                <p>Email: info@gmail.com</p>
+                <p>Phone: +8801711223344</p>
+                <img src="images/icons/fb.png" alt="facebook">
+                <img src="images/icons/twitter.png" alt="twitter">
+                <img src="images/icons/youtube.png" alt="youtube">
+            </div>
+            <div class="right">
+                <h4 class="section-title-2">Subscribe</h4>
+                <form>
+                    <input type="email" name="email" id="" placeholder="Ente your email">
+                </form>
+                <button class="btn-secondary">Subscribe</button>
 
+            </div>
+        </div>
     </footer>
   </body>
 </html>
