finally radiant added & assinment complete

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
     <!-- 4th section start -->
     <section class="content-2">
       <div class="radiant-content-img">
-        <img src="images/watch.png" alt="watch" />
+        
+        <!-- <img src="images/watch.png" alt=""> -->
+        <img src="images/gradient1.png" alt="">
         <div class="radiant-content-text">
           <h4>
             Always keep a positive <br />
