--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@
     <!-- 4th section start -->
     <section class="content-2">
       <div class="radiant-content-img">
-        
         <!-- <img src="images/watch.png" alt=""> -->
-        <img src="images/gradient1.png" alt="">
+        <img src="images/gradient1.png" alt="" />
         <div class="radiant-content-text">
           <h4>
             Always keep a positive <br />
@@ -117,25 +116,33 @@
     <!-- 4th section end -->
     <!-- footer start -->
     <footer>
-        <div class="footer-container">
-            <div class="left">
-                <h4 class="section-title-2">Future</h4>
-                <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
-                <p>Email: info@gmail.com</p>
-                <p>Phone: +8801711223344</p>
-                <img src="images/icons/fb.png" alt="facebook">
-                <img src="images/icons/twitter.png" alt="twitter">
-                <img src="images/icons/youtube.png" alt="youtube">
-            </div>
-            <div class="right">
-                <h4 class="section-title-2">Subscribe</h4>
-                <form>
-                    <input type="email" name="email" id="" placeholder="Ente your email">
-                </form>
-                <button class="btn-secondary">Subscribe</button>
-
-            </div>
+      <div class="footer-container">
+        <div class="left">
+          <h4 class="section-title-2">Future</h4>
+          <p>
+            There are many variations of passages of Lorem Ipsum <br />
+            available, but the majority have suffered alteration in some <br />
+            form, by injected humour, or randomised words
+          </p>
+          <p>Email: info@gmail.com</p>
+          <p>Phone: +8801711223344</p>
+          <img src="images/icons/fb.png" alt="facebook" />
+          <img src="images/icons/twitter.png" alt="twitter" />
+          <img src="images/icons/youtube.png" alt="youtube" />
         </div>
+        <div class="right">
+          <h4 class="section-title-2">Subscribe</h4>
+          <form>
+            <input
+              type="email"
+              name="email"
+              id=""
+              placeholder="Ente your email"
+            />
+          </form>
+          <button class="btn-secondary">Subscribe</button>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
